force-app/main/default/objects/student__c/student__c.object-meta.xml
<CustomObject>
    <label>student</label>
    <nameField>
        <displayFormat>St-{0000}</displayFormat>
        <label>student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>