force-app/main/default/objects/student__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tst</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <type>Lookup</type>
</CustomField>