force-app/main/default/objects/student__c/fields/intial_fee__c.field-meta.xml
<CustomField>
    <fullName>intial_fee__c</fullName>
    <label>intial fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>