force-app/main/default/objects/student__c/fields/total_fee__c.field-meta.xml
<CustomField>
    <fullName>total_fee__c</fullName>
    <formula>intial_fee__c  * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>